Fixes to navbar collapsing (hopefullly)

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, html {
 }
 
 .connect h5{
-    color: rgb(121, 121, 121);
+    color: rgb(192, 192, 192);
 }
 
 .aboutme p {
